--- a/06-booleans.html
+++ b/06-booleans.html
@@ -18,12 +18,39 @@
             console.log('You cannot drive');
           }
 */
-
+ /*
           console.log (false && false);
           console.log (0.2 >= 0 && 0.2 <1/3);
 
           console.log(true || false);
           console.log(0.2 >= 0 || 0.2 <1/3);
+    */
+/*
+    if (0){
+      console.log('True');
+    }
+
+    const cartQuantity = 5;
+
+    if (cartQuantity){
+      console.log ('Cart has products');
+    }
+
+    console.log(!0);
+    console.log('text'/5);
+    const variable1 = undefined;
+    console.log(variable1);
+  */
+
+  const result = 0 ? 'Truthy' : 'Falsy';
+  console.log(result);
+
+  true && console.log('hello');
+  const message = true && 'hello';
+  console.log(message);
+
+  const currency = undefined || 'usd';
+  console.log(currency);
         </script>
     </body>
 </html>
