--- a/06-rock-paper-scissors.html
+++ b/06-rock-paper-scissors.html
@@ -5,21 +5,90 @@
     </head>
     <body>
         <p>Rock Paper Scissors</p>
-        <button onclick = "
-          const randomNumber = Math.random();
 
-          if (randomNumber >= 1/3 && randomNumber <2/3) {
-            const computerMove = 'Rock';
-          } else if (randomNumber >= 1/3 && randomNumber <2/3) {
-            const computerMove = 'Paper';
-          } else {
-            const computerMove = 'Scissors';
+        <!--Usuario elige roca--> 
+        <button onclick = "
+         const randomNumber = Math.random();
+
+          let computerMove = '';
+
+          if (randomNumber >= 0 && randomNumber < 1/3) {
+            computerMove = 'Rock';
+          } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
+            computerMove = 'Paper';
+          } else if (randomNumber >= 2/3 && randomNumber < 1) {
+            computerMove = 'Scissors';
           }
-        "id="rock">Rock</button>
-        
-        <button id="paper">Paper</button>
-        
-        <button id="scissors">Scissors</button>
+
+        console.log(computerMove);
+        let result = '';
+
+        if (computerMove === 'Rock'){
+         result = 'Tie';
+        } else if (computerMove === 'Paper'){
+         result = 'You lose!';
+        } else if (computerMove === 'Scissors'){
+         result = 'You win!';
+        }
+
+        alert(`You picked rock, computer picked ${computerMove}. ${result}`);
+      ">Rock</button>
+
+      <!-- Usuario elige papel-->
+      <button onclick = "
+        randomNumber = Math.random();
+
+        computerMove = '';
+
+        if (randomNumber >= 0 && randomNumber < 1/3) {
+        computerMove = 'Rock';
+        } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
+        computerMove = 'Paper';
+        } else if (randomNumber >= 2/3 && randomNumber < 1) {
+        computerMove = 'Scissors';
+        }
+
+        console.log(computerMove);
+        result = '';
+
+        if (computerMove === 'Rock'){
+        result = 'You win!';
+        } else if (computerMove === 'Paper'){
+        result = 'Tie';
+        } else if (computerMove === 'Scissors'){
+        result = 'You lose!';
+        }
+
+        alert(`You picked paper, computer picked ${computerMove}. ${result}`);
+      ">Paper</button>
+
+      <!-- usuario elige tijeras-->
+      <button onclick = "
+        randomNumber = Math.random();
+
+        computerMove = '';
+
+        if (randomNumber >= 0 && randomNumber < 1/3) {
+        computerMove = 'Rock';
+        } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
+        computerMove = 'Paper';
+        } else if (randomNumber >= 2/3 && randomNumber < 1) {
+        computerMove = 'Scissors';
+        }
+
+        console.log(computerMove);
+        result = '';
+
+        if (computerMove === 'Rock'){
+        result = 'You lose!';
+        } else if (computerMove === 'Paper'){
+        result = 'You win!';
+        } else if (computerMove === 'Scissors'){
+        result = 'Tie';
+        }
+
+        alert(`You picked scissors, computer picked ${computerMove}. ${result}`);
+      ">Scissors</button>
 
 
         <script>
